[package]
name = "drs"
version = "0.1.0"
authors = ["tobi <s1910567016@students.fh-hagenberg.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guid-create = "0.1.1"
json = "0.12.4"
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.11.3"
