[package]
name = "drs"
version = "0.1.0"
authors = ["tobi <s1910567016@students.fh-hagenberg.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guid-create = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.11.3"
crossbeam = "0.8.0"
